<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/seconds_left"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/segundos"
            android:textColor="@color/mi_green"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/photos_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/dots"
            android:textColor="@color/mi_green"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/uploaded_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/dots"
            android:textColor="@color/mi_green"
            android:textSize="11sp" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_of_flash"
            android:textColor="@color/mi_green"
            android:textSize="11sp"
            android:layoutDirection="rtl"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_sound"
            android:textColor="@color/mi_green"
            android:textSize="11sp"
            android:layoutDirection="rtl"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchImageVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_image_video"
            android:textColor="@color/mi_green"
            android:textSize="11sp"
            android:layoutDirection="rtl"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_higth"
            android:textColor="@color/mi_green"
            android:textSize="11sp"
            android:layoutDirection="rtl"
            />
    </LinearLayout>

    <Button
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capturar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />
</RelativeLayout>